# manifold

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  GEMINI.md  README.md  biome.json  components.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_qdrant.rs  tsconfig.json  vite.config.ts
.cursor/rules/: shadcn-lucide-standards.mdc
.github/workflows/: build.yml  release.yml  tauri-build.yml
convex/: embeddings.d.ts  embeddings.js  embeddings.ts  files.d.ts  files.js  files.ts  schema.d.ts  schema.js  schema.ts  search.d.ts  search.js  search.ts
convex/_generated/: api.d.ts
docs/: runtime-binaries.md
electron/: app-paths.ts  bootstrap.ts  docker-compose.ts  embedding-job.ts  gemini-api.ts  main.ts  pdf-document.ts  pdf-split.ts  pdfjs-document-init.ts  pdfjs-node-shim.ts  preload.ts  qdrant.ts  scan-walk.ts  text-index.ts  thumbnails.ts
electron/core/: app-paths.ts  log.ts  window-reveal.ts
qdrant_storage/: raft_state.json
qdrant_test/: Cargo.toml
scripts/: binaries-manifest.json  dev-electron-mac.mjs  generate-app-icon.mjs  qdrant-dev.sh  run-dev.mjs  setup-binaries.mjs  setup-dev.mjs
shared/: default-folder-excludes.json
src/: App.css  RouterApp.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  check_qdrant.py  tauri.conf.json  test_snippet.rs
src-tauri/icons/: icon.icns
src-tauri/resources/pdfium/: README.md
src-tauri/resources/qdrant/: README.md
src-tauri/src/: embedding.rs  gemini_settings.rs  lib.rs  logging.rs  qdrant.rs  qdrant_test.rs  scan.rs  text_index.rs
(+168 files in other folders)
