[package]
name = "manifold"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manifold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
sha2 = "0.10"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pdfium-render = "0.8"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v5", "serde", "macro-diagnostics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16.3"
qdrant-client = "1.17"
tonic = "0.12"
url = "2.5.8"

